--- a/core/slides/slides02_python_ds_stack.qmd
+++ b/core/slides/slides02_python_ds_stack.qmd
@@ -1,7 +1,7 @@
 ---
 date: "`r Sys.Date()`"
 title: "Python Data Science Stack"
-engine: knitr
+engine: jupyter
 ---
 
 # What is `Python` ?  {background-color="#1c191c"}
